--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -55,6 +55,8 @@ pre.highlight {
 [data-theme="dark"] .highlight .na { color: #d19a66; }
 [data-theme="dark"] .highlight .nb, [data-theme="dark"] .highlight .nc, [data-theme="dark"] .highlight .no, [data-theme="dark"] .highlight .nd, [data-theme="dark"] .highlight .ni, [data-theme="dark"] .highlight .ne, [data-theme="dark"] .highlight .nl, [data-theme="dark"] .highlight .py, [data-theme="dark"] .highlight .bp, [data-theme="dark"] .highlight .vc, [data-theme="dark"] .highlight .vg { color: #e5c07b; }
 [data-theme="dark"] .highlight .nt { color: #e06c75; }
+[data-theme="dark"] .language-json .highlight .s2 { color: #98c379; }
+[data-theme="dark"] .language-json .highlight .nt { color: #61afef; }
 [data-theme="dark"] .highlight .nv, [data-theme="dark"] .highlight .vi { color: #e06c75; }
 [data-theme="dark"] .highlight .o, [data-theme="dark"] .highlight .p { color: #abb2bf; }
 [data-theme="dark"] .highlight .sr, [data-theme="dark"] .highlight .ss { color: #56b6c2; }
